--- a/src/app/proj/proj.component.html
+++ b/src/app/proj/proj.component.html
@@ -3,14 +3,16 @@
   <table class="table table-striped">
       <thead>
     <tr>
-        <th scope="col">Id</th>
-        <th scope="col">Nome</th>
+        <th>Id</th>
+        <th>Nome</th>
+        <th>Descrição</th>
     </tr>
     </thead>
     <tbody *ngFor="let projeto of projetos">
       <tr>
         <td>{{projeto.id}}</td>
         <td>{{projeto.nome}}</td>
+        <td>{{projeto.descricao}}</td>
       </tr>
     </tbody>
   </table>
