--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<h2>Escolha</h2>
-      <a href="projetos">Projetos /</a>  <a href="nproj">Adicionar Projeto</a><br>
-      <a href="tarefas">Tarefas /</a> <a href="ntask">Adicionar Tarefa</a><br>
+
+      <a href="projetos">Projetos /</a>  <a href="nproj">Adicionar Projeto</a>
+      <a href="tarefas">Tarefas /</a> <a href="ntask">Adicionar Tarefa</a>
       <a href="registros">Despesas /</a> <a href="nreg">Adicionar Registro</a>
 
 <router-outlet></router-outlet>
