--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 
-      <a href="projetos">Projetos /</a>  <a href="nproj">Adicionar Projeto</a>
-      <a href="tarefas">Tarefas /</a> <a href="ntask">Adicionar Tarefa</a>
-      <a href="registros">Despesas /</a> <a href="nreg">Adicionar Registro</a>
+      <button><a href="projetos">Projetos </a></button>  <button><a href="nproj">Adicionar Projeto</a></button>
+      <button><a href="tarefas">Tarefas </a></button> <button><a href="ntask">Adicionar Tarefa</a></button>
+      <button><a href="registros">Despesas</a></button> <button><a href="nreg">Adicionar Registro</a></button>
 
 <router-outlet></router-outlet>
