--- a/src/app/n-reg/n-reg.component.html
+++ b/src/app/n-reg/n-reg.component.html
@@ -18,6 +18,14 @@
     <span matTextPrefix>$&nbsp;</span>
     <span matTextSuffix>.00</span>
   </mat-form-field>
+    <mat-form-field class="pix">
+    <mat-label>Pix:</mat-label>
+  <input matInput type="text" id="Pix" name="Pix" [(ngModel)]="reg.pix">
+  </mat-form-field>
+    <mat-form-field class="codbar">
+    <mat-label>Codigo de Barras:</mat-label>
+  <input matInput type="text" id="codbar" name="codbar" [(ngModel)]="reg.codbar">
+  </mat-form-field>
     <mat-form-field class="cd">
     <mat-label>C/D:</mat-label>
   <input matInput type="text" id="CD" name="CD" [(ngModel)]="reg.CD">
