parcela e nroparcela edit

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,6 @@
       <button><a href="projetos">Projetos </a></button>  <button><a href="nproj">Adicionar Projeto</a></button>
       <button><a href="tarefas">Tarefas </a></button> <button><a href="ntask">Adicionar Tarefa</a></button>
       <button><a href="registros">Despesas</a></button> <button><a href="nreg">Adicionar Registro</a></button>
+      <button><a href="contas">Contas a Pagar</a></button>
 
 <router-outlet></router-outlet>
