--- a/src/app/edit-reg/edit-reg.component.html
+++ b/src/app/edit-reg/edit-reg.component.html
@@ -19,6 +19,14 @@
     <label for="valor">Valor:</label>
     <input type="number" id="valor" name="valor" [(ngModel)]="reg.valor">
   </div>
+    <div>
+    <label for="nparc">Nro Parcelas:</label>
+    <input type="number" id="nparc" name="nparc" [(ngModel)]="reg.parc">
+  </div>
+    <div>
+    <label for="parc">Parcela:</label>
+    <input type="number" id="parc" name="parc" [(ngModel)]="reg.parc">
+  </div>
   <div>
     <label for="CD">C/D:</label>
     <input type="text" id="CD" name="CD" [(ngModel)]="reg.CD">
